# Pilot

./: .env.example  .pre-commit-config.yaml  README.md  REASONING_API.md  TESTING.md  benchmark_pipeline.py  main.py  pyproject.toml  requirements.txt  run_interpreter.py  run_tests.py  strategyqa_results.json
examples/: LLMManager.py  __init__.py  azure_config.py  azure_gpt5_usage.py  azure_simple_example.py  batch_evaluation.py  gemini_usage.py  migration_example.py  simple_usage.py  test_strategyqa.py
tests/: 3.json  __init__.py
tests/fixtures/: bitvec_test.json  enum_test.json  simple_test.json
tests/integration/: test_bug_fixes.py  test_interpreter.py
tests/unit/: test_expression_parser.py  test_optimizer.py  test_security_validator.py  test_sort_manager.py  test_verifier.py
z3dsl/: __init__.py  cli.py  interpreter.py  knowledge_base_manager.py  llm_tools.py
z3dsl/dsl/: __init__.py  expressions.py  sorts.py
z3dsl/optimization/: __init__.py  optimizer.py
z3dsl/reasoning/: __init__.py  evaluation.py  program_generator.py  prompt_template.py  proof_of_thought.py  verifier.py
z3dsl/security/: __init__.py
z3dsl/solvers/: __init__.py  z3_solver.py
z3dsl/verification/: __init__.py  verifier.py
