[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
# Ruff is used for linting; Black remains the formatter.
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Core rule sets: pycodestyle/pyflakes/imports/pyupgrade/bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.12"
# Reasonable strictness for a new integration
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# Many ML/DS libs lack type hints; relax imports to avoid noise
ignore_missing_imports = true
# Skip virtual environment
exclude = "env/"

[tool.poetry]
name = "proofofthought"
version = "0.1.0"
packages = [{ include = "z3dsl" }]
dependencies = { "python" = "^3.9", "z3-solver" = "4.15.3.0", "litellm" = { version = "1.40.14", python = ">=3.8" }, "numpy" = "^1.26.0" , "openai" = {version="2.0.1", python = ">=3.8" },"scikit-learn" = "*", "google-generativeai" = "*" }
